--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         console.log(a[i] + ", " + a[j] + ", " + a[l]);
                     }
                 }
-            }
+            }dlakdaslkds
         }
 
 
